--- a/index.html
+++ b/index.html
@@ -2,214 +2,111 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <title>UnknownChat</title>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
 <style>
-body{margin:0;font-family:Arial,sans-serif;background:#e0f7fa;}
-#login,#chat{display:none;}
-#login{width:320px;margin:80px auto;background:#fff;border-radius:12px;box-shadow:0 5px 15px rgba(0,0,0,0.3);padding:20px;text-align:center;position:relative;}
-#login h2{color:#00796b;}
-input{width:90%;padding:10px;margin:8px 0;border-radius:5px;border:1px solid #ccc;}
-button{padding:10px;margin-top:10px;width:95%;border:none;border-radius:5px;background:#00796b;color:white;font-weight:bold;cursor:pointer;}
-#loginStatus{margin-top:10px;font-size:0.9em;}
-#loadingBar{position:absolute;top:0;left:0;height:4px;width:0;background:#00796b;border-radius:2px;transition:width 0.3s;}
-#chat{max-width:600px;margin:20px auto;background:#f0f0f0;padding:15px;border-radius:10px;}
-.header{font-weight:bold;font-size:1.2em;margin-bottom:10px;}
-#chatStatus{font-size:0.9em;color:#555;}
-#messages{max-height:60vh;overflow-y:auto;margin-bottom:10px;}
-.msg{padding:8px 12px;border-radius:10px;margin:5px 0;max-width:70%;position:relative;word-break:break-word;}
-.mine{background:#dcf8c6;margin-left:auto;text-align:right;}
-.other{background:#fff;margin-right:auto;text-align:left;}
-.time{font-size:0.7em;color:gray;margin-top:2px;}
-.date-separator{text-align:center;font-size:0.8em;color:gray;margin:10px 0;}
-#typing{font-style:italic;color:gray;margin-bottom:5px;}
-.delete-btn{font-size:0.7em;color:red;cursor:pointer;margin-left:5px;}
-#msgInput{width:80%;padding:10px;border-radius:5px;border:1px solid #ccc;}
-#sendBtn{padding:10px;border-radius:5px;border:none;background:#00796b;color:white;cursor:pointer;}
-#logoutBtn{padding:8px 12px;border-radius:5px;border:none;background:#d32f2f;color:white;cursor:pointer;float:right;margin-top:5px;}
-#togglePass{cursor:pointer;font-size:1.2em;margin-left:5px;position:absolute;right:35px;top:100px;}
+body, html{margin:0;padding:0;height:100%;font-family:Arial;background:#e5ddd5;}
+#login,#chat{max-width:420px;margin:auto;height:100%;}
+#login{display:flex;flex-direction:column;justify-content:center;padding:20px}
+input,button{padding:12px;margin:6px 0;font-size:16px}
+button{background:#128c7e;color:#fff;border:none}
+#chat{display:none;flex-direction:column;height:100%}
+#header{background:#075e54;color:#fff;padding:12px}
+#headerName{font-size:16px;font-weight:bold}
+#headerStatus{font-size:12px}
+#messages{flex:1;overflow-y:auto;padding:10px;background:#e5ddd5}
+.msg{max-width:70%;padding:8px;border-radius:8px;margin:6px 0;font-size:14px;word-wrap:break-word}
+.right{margin-left:auto;background:#dcf8c6}
+.left{margin-right:auto;background:#fff}
+.small{font-size:10px;color:#555;text-align:right}
+#typing{font-size:12px;color:#555;padding-left:10px;height:18px}
+#sendBox{display:flex;padding:5px;background:#fff}
+#sendBox input{flex:1;font-size:16px;padding:10px}
+#sendBox button{padding:10px;margin-left:5px}
 </style>
 </head>
 <body>
-
-<!-- Login -->
 <div id="login">
-  <div id="loadingBar"></div>
-  <h2>UnknownChat</h2>
-  <input type="text" id="username" placeholder="Username"><br>
-  <input type="password" id="password" placeholder="Password">
-  <span id="togglePass">👁️</span>
-  <button id="loginBtn">Login</button>
-  <div id="loginStatus"></div>
+<h2>UnknownChat</h2>
+<input id="username" placeholder="Username">
+<input id="password" type="password" placeholder="Password">
+<button onclick="login()">Login</button>
+<p id="error"></p>
 </div>
-
-<!-- Chat -->
 <div id="chat">
-  <div class="header">
-    <span id="chatName"></span> 
-    <span id="chatStatus"></span>
-  </div>
-  <div id="typing"></div>
-  <div id="messages"></div>
-  <input type="text" id="msgInput" placeholder="Type a message...">
-  <button id="sendBtn">Send</button>
-  <button id="logoutBtn">Logout</button>
+<div id="header">
+<div id="headerName"></div>
+<div id="headerStatus"></div>
 </div>
-
-<!-- Firebase -->
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
-
+<div id="messages"></div>
+<div id="typing"></div>
+<div id="sendBox">
+<input id="msg" placeholder="Type a message" oninput="typing(true)">
+<button onclick="send()">Send</button>
+</div>
+</div>
 <script>
-// Firebase config (tumhara original project)
-const firebaseConfig = {
-  apiKey: "AIzaSyB57DbuZWjQjaekNFkUrYmABql_yl-KFnA",
-  authDomain: "unknownchat-bbd4b.firebaseapp.com",
-  projectId: "unknownchat-bbd4b",
-  storageBucket: "unknownchat-bbd4b.appspot.com",
-  messagingSenderId: "134440126866",
-  appId: "1:134440126866:web:54c83a3ab12d7bdfc3194b"
-};
+const firebaseConfig={apiKey:"AIzaSyB57DbuZWjQjaekNFkUrYmABql_yl-KFnA",authDomain:"unknownchat-bbd4b.firebaseapp.com",projectId:"unknownchat-bbd4b",storageBucket:"unknownchat-bbd4b.firebasestorage.app",messagingSenderId:"134440126866",appId:"1:134440126866:web:54c83a3ab12d7bdfc3194b"};
 firebase.initializeApp(firebaseConfig);
-const db = firebase.firestore();
-
-// Users & Passwords
-const users = { "foreverus10":"Kakka", "foreverus29":"Bacha" };
-const validUsers = { "foreverus10":"bachakakka102913","foreverus29":"bachakakka102913" };
-
-let currentUser="", friendUser="";
-
-// Elements
-const loginDiv=document.getElementById("login");
-const chatDiv=document.getElementById("chat");
-const loginBtn=document.getElementById("loginBtn");
-const sendBtn=document.getElementById("sendBtn");
-const logoutBtn=document.getElementById("logoutBtn");
-const msgInput=document.getElementById("msgInput");
-const messagesDiv=document.getElementById("messages");
-const chatName=document.getElementById("chatName");
-const chatStatus=document.getElementById("chatStatus");
-const typingDiv=document.getElementById("typing");
-const usernameInput=document.getElementById("username");
-const passwordInput=document.getElementById("password");
-const togglePass=document.getElementById("togglePass");
-const loginStatus=document.getElementById("loginStatus");
-const loadingBar=document.getElementById("loadingBar");
-
-// Toggle password visibility
-togglePass.onclick=()=>{ passwordInput.type = passwordInput.type==="password"?"text":"password"; }
-
-// Login
-loginBtn.onclick=()=>{
-  loadingBar.style.width="30%";
-  const u=usernameInput.value.trim();
-  const p=passwordInput.value.trim();
-  if(validUsers[u] && validUsers[u]===p){
-    loadingBar.style.width="70%";
-    currentUser=u;
-    friendUser=(u==="foreverus10")?"foreverus29":"foreverus10";
-    setTimeout(()=>{
-      loginDiv.style.display="none";
-      chatDiv.style.display="block";
-      chatName.innerText=users[friendUser];
-      loadingBar.style.width="100%";
-      initChat();
-      setCurrentOnline();
-    },500);
-  } else loginStatus.innerText="Invalid username or password";
+const auth=firebase.auth();
+const db=firebase.firestore();
+const users={foreverus10:{email:"unknownmarch1@gmail.com",chat:"Bacha"},foreverus29:{email:"unknownmarch001@gmail.com",chat:"Kakka"}};
+let me="",other="";
+const typingDiv=document.getElementById('typing');
+function login(){
+ const u=username.value,p=password.value;
+ if(!users[u]){error.innerText="Invalid user";return;}
+ auth.signInWithEmailAndPassword(users[u].email,p).then(()=>{
+  me=u;other=Object.keys(users).find(x=>x!==u);
+  document.getElementById("login").style.display="none";
+  document.getElementById("chat").style.display="flex";
+  headerName.innerText=users[other].chat;
+  setStatus(true);
+  load();
+ }).catch(e=>error.innerText=e.message);
 }
-
-// Logout
-logoutBtn.onclick=()=>{ location.reload(); }
-
-// Typing indicator
-let typingTimeout;
-msgInput.oninput=()=>{
-  db.collection("status").doc(currentUser).set({typing:true},{merge:true});
-  clearTimeout(typingTimeout);
-  typingTimeout=setTimeout(()=>{
-    db.collection("status").doc(currentUser).set({typing:false},{merge:true});
-  },1000);
+function send(){
+ if(!msg.value)return;
+ db.collection("messages").add({from:me,to:other,text:msg.value,time:Date.now(),seen:false});
+ msg.value="";
+ typing(false);
 }
-
-// Send message
-sendBtn.onclick=()=>{ sendMessage(); }
-function sendMessage(){
-  const text=msgInput.value.trim();
-  if(!text) return;
-  db.collection("messages").add({
-    text,
-    user:currentUser,
-    time:firebase.firestore.Timestamp.now(),
-    status:"sent"
-  });
-  msgInput.value="";
-}
-
-// Listen messages
-let lastMsgDate="";
-db.collection("messages").orderBy("time").onSnapshot(snapshot=>{
-  messagesDiv.innerHTML="";
-  snapshot.forEach(doc=>{
-    const msg=doc.data();
-    if(msg.deletedFor && msg.deletedFor.includes(currentUser)) return;
-    const msgDate=msg.time.toDate();
-    const dateStr=msgDate.toLocaleDateString();
-    if(dateStr!==lastMsgDate){
-      const sep=document.createElement("div");
-      sep.className="date-separator";
-      sep.innerText=(dateStr===new Date().toLocaleDateString())?"Today":dateStr;
-      messagesDiv.appendChild(sep);
-      lastMsgDate=dateStr;
-    }
+function load(){
+ db.collection("messages").orderBy("time").onSnapshot(s=>{
+  messages.innerHTML="";
+  s.forEach(d=>{
+   const m=d.data();
+   if((m.from===me && m.to===other)||(m.from===other && m.to===me)){
     const div=document.createElement("div");
-    div.className=(msg.user===currentUser)?"msg mine":"msg other";
-    div.innerHTML=`<span>${msg.text}</span><div class="time">${msg.user===currentUser?formatTime(msgDate)+" "+getStatusIcon(msg.status):formatTime(msgDate)}</div>`;
-    if(msg.user===currentUser){
-      const delMe=document.createElement("span");
-      delMe.className="delete-btn"; delMe.innerText="Delete for me";
-      delMe.onclick=()=>deleteMsg(doc.id,false);
-      const delBoth=document.createElement("span");
-      delBoth.className="delete-btn"; delBoth.innerText="Delete for both";
-      delBoth.onclick=()=>deleteMsg(doc.id,true);
-      div.appendChild(delMe);
-      div.appendChild(delBoth);
-    }
-    messagesDiv.appendChild(div);
+    div.className="msg "+(m.from===me?"right":"left");
+    div.innerHTML=m.text;
+    if(m.from===me){div.innerHTML+=`<div class='small'>${m.seen?"✔✔ Seen":"✔ Delivered"}</div>`;}
+    else{d.ref.update({seen:true});}
+    messages.appendChild(div);
+    messages.scrollTop=messages.scrollHeight;
+   }
   });
-  messagesDiv.scrollTop=messagesDiv.scrollHeight;
-});
-
-// Delete
-function deleteMsg(id,forBoth){
-  if(forBoth){ if(confirm("Delete for both?")) db.collection("messages").doc(id).delete(); }
-  else db.collection("messages").doc(id).update({deletedFor: firebase.firestore.FieldValue.arrayUnion(currentUser)});
+ });
+ db.collection("status").doc(other).onSnapshot(d=>{
+  const data=d.data();
+  if(data?.online){headerStatus.innerText="online";}
+  else if(data?.lastSeen){
+   const t=new Date(data.lastSeen);
+   const h=('0'+t.getHours()).slice(-2);
+   const m=('0'+t.getMinutes()).slice(-2);
+   headerStatus.innerText=`Last seen ${h}:${m}`;
+  } else {headerStatus.innerText="offline";}
+  typingDiv.innerText=data?.typing?"typing...":"";
+ });
 }
-
-// Header status
-db.collection("status").doc(friendUser).onSnapshot(snap=>{
-  const s=snap.data();
-  if(s){
-    chatStatus.innerText=s.online?"online":s.lastSeen?`last seen ${formatLastSeen(s.lastSeen)}`:"offline";
-    typingDiv.innerText=s.typing?"Typing...":"";
-  }
-});
-
-// Online / last seen
-function setCurrentOnline(){
-  db.collection("status").doc(currentUser).set({online:true,typing:false},{merge:true});
-  window.addEventListener("beforeunload",()=>{
-    db.collection("status").doc(currentUser).set({online:false,lastSeen:firebase.firestore.FieldValue.serverTimestamp()},{merge:true});
-  });
+function setStatus(v){
+ db.collection("status").doc(me).set({online:v,typing:false,lastSeen:Date.now()});
+ window.onbeforeunload=()=>db.collection("status").doc(me).set({online:false,typing:false,lastSeen:Date.now()});
 }
-
-// Utils
-function formatTime(d){return d.getHours().toString().padStart(2,'0')+":"+d.getMinutes().toString().padStart(2,'0');}
-function formatLastSeen(ts){if(!ts) return ""; const d=ts.toDate? ts.toDate() : new Date(ts); return formatTime(d);}
-function getStatusIcon(status){if(status==="sent") return "✔"; if(status==="delivered") return "✔✔"; if(status==="seen") return '<span style="color:#ff69b4;">✔✔</span>'; return "";}
-
-// Initialize chat placeholder
-function initChat(){ messagesDiv.innerHTML=""; typingDiv.innerText=""; loginStatus.innerText=""; loadingBar.style.width="0"; }
+function typing(v){db.collection("status").doc(me).update({typing:v});}
 </script>
 </body>
 </html>
