--- a/index.html
+++ b/index.html
@@ -4,39 +4,37 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <title>UnknownChat</title>
-
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
-
 <style>
-body,html{margin:0;height:100%;font-family:Arial;background:#e5ddd5}
-#login,#chat{max-width:420px;margin:auto;height:100%}
-#login{display:flex;flex-direction:column;justify-content:center;padding:20px}
+body,html{margin:0;height:100%;font-family:Arial;background:#e5ddd5;}
+#login,#chat{max-width:420px;margin:auto;height:100%;}
+#login{display:flex;flex-direction:column;justify-content:center;padding:20px;text-align:center;}
 input,button{padding:12px;margin:6px 0;font-size:16px}
 button{background:#128c7e;color:#fff;border:none;border-radius:4px}
-#chat{display:none;flex-direction:column}
-#header{background:#075e54;color:#fff;padding:10px;display:flex;justify-content:space-between;align-items:center}
-#headerName{font-weight:bold}
-#headerStatus{font-size:12px}
-#messages{flex:1;overflow-y:auto;padding:10px}
-.msg{max-width:70%;padding:8px;border-radius:8px;margin:6px 0;word-wrap:break-word;transition:opacity .4s}
-.right{margin-left:auto;background:#dcf8c6}
-.left{background:#fff}
-.fade{opacity:0}
-.small{font-size:10px;text-align:right;color:#555}
-.pink{color:#e91e63}
-.date{text-align:center;font-size:12px;color:#666;margin:10px}
-#typing{font-size:12px;color:#555;padding-left:10px;height:18px}
-#sendBox{display:flex;background:#fff;padding:5px}
-#sendBox input{flex:1}
-.eye{cursor:pointer;margin-left:-30px}
-.undo{color:#128c7e;font-size:12px;cursor:pointer}
+#chat{display:none;flex-direction:column;height:100%;}
+#header{background:#075e54;color:#fff;padding:10px;display:flex;justify-content:space-between;align-items:center;}
+#headerName{font-weight:bold;}
+#headerStatus{font-size:12px;}
+#messages{flex:1;overflow-y:auto;padding:10px;}
+.msg{max-width:70%;padding:8px;border-radius:8px;margin:6px 0;word-wrap:break-word;transition:opacity .4s;}
+.right{margin-left:auto;background:#dcf8c6;}
+.left{background:#fff;}
+.fade{opacity:0;}
+.small{font-size:10px;text-align:right;color:#555;}
+.pink{color:#e91e63;}
+.date{text-align:center;font-size:12px;color:#666;margin:10px;}
+#typing{font-size:12px;color:#555;padding-left:10px;height:18px;}
+#sendBox{display:flex;background:#fff;padding:5px;}
+#sendBox input{flex:1;}
+.eye{cursor:pointer;margin-left:-30px;}
+#loading{font-size:14px;color:#128c7e;margin-top:10px;}
+.dot{display:inline-block;width:6px;height:6px;background:#128c7e;border-radius:50%;margin:2px;animation:blink 1s infinite;}
+@keyframes blink{0%,80%,100%{opacity:0}40%{opacity:1}}
 </style>
 </head>
-
 <body>
-
 <div id="login">
 <h2>UnknownChat</h2>
 <input id="username" placeholder="Username">
@@ -45,6 +43,9 @@ button{background:#128c7e;color:#fff;border:none;border-radius:4px}
 <span class="eye" onclick="togglePass()">👁️</span>
 </div>
 <button onclick="loginUser()">Login</button>
+<div id="loading" style="display:none;">
+<span class="dot"></span><span class="dot"></span><span class="dot"></span>
+</div>
 <p id="error" style="color:red"></p>
 </div>
 
@@ -56,10 +57,8 @@ button{background:#128c7e;color:#fff;border:none;border-radius:4px}
 </div>
 <button onclick="logout()">Logout</button>
 </div>
-
 <div id="messages"></div>
 <div id="typing"></div>
-
 <div id="sendBox">
 <input id="msg" placeholder="Type a message">
 <button onclick="sendMsg()">Send</button>
@@ -78,6 +77,7 @@ const db=firebase.firestore();
 
 const loginDiv=document.getElementById("login");
 const chatDiv=document.getElementById("chat");
+const loadingDiv=document.getElementById("loading");
 
 const users={
  foreverus10:{email:"unknownmarch1@gmail.com",chat:"Kakka"},
@@ -86,33 +86,26 @@ const users={
 
 let me="",other="",typingTimer;
 
-function togglePass(){
- password.type=password.type==="password"?"text":"password";
-}
+function togglePass(){password.type=password.type==="password"?"text":"password";}
 
 function loginUser(){
  const u=username.value,p=password.value;
  if(!users[u]){error.innerText="Invalid user";return;}
+ error.innerText=""; loadingDiv.style.display="block";
  auth.signInWithEmailAndPassword(users[u].email,p).then(()=>{
   me=u; other=Object.keys(users).find(x=>x!==u);
-  loginDiv.style.display="none";
-  chatDiv.style.display="flex";
+  loginDiv.style.display="none"; chatDiv.style.display="flex";
   headerName.innerText=users[other].chat;
-  setStatus(true);
-  loadChat();
- }).catch(e=>error.innerText=e.message);
+  setStatus(true); loadChat();
+ }).catch(e=>{error.innerText=e.message;loadingDiv.style.display="none";});
 }
 
 function logout(){
- setStatus(false);
- auth.signOut();
- location.reload();
+ setStatus(false); auth.signOut(); location.reload();
 }
 
 function setStatus(v){
- db.collection("status").doc(me).set({
-  online:v,typing:false,lastSeen:Date.now()
- });
+ db.collection("status").doc(me).set({online:v,typing:false,lastSeen:Date.now()});
  window.onbeforeunload=()=>setStatus(false);
 }
 
@@ -126,7 +119,7 @@ function sendMsg(){
  if(!msg.value)return;
  db.collection("messages").add({
   from:me,to:other,text:msg.value,time:Date.now(),
-  seen:false,deleted:false,deletedFor:[]
+  seen:false,deleted:false,deletedFor:[],replyTo:null
  });
  msg.value="";
  db.collection("status").doc(me).update({typing:false});
@@ -138,44 +131,41 @@ function loadChat(){
   messages.innerHTML="";
   snap.forEach(doc=>{
    const m=doc.data();
-   if(((m.from===me&&m.to===other)||(m.from===other&&m.to===me))
-    && !(m.deletedFor||[]).includes(me)){
+   if(((m.from===me&&m.to===other)||(m.from===other&&m.to===me)) && !(m.deletedFor||[]).includes(me)){
     const d=new Date(m.time).toDateString();
-    if(d!==lastDate){
-     messages.innerHTML+=`<div class="date">${d}</div>`;
-     lastDate=d;
-    }
+    if(d!==lastDate){messages.innerHTML+=`<div class="date">${d}</div>`; lastDate=d;}
     const time=new Date(m.time).toLocaleString("en-US",{hour:"numeric",minute:"numeric",hour12:true});
     const div=document.createElement("div");
     div.className="msg "+(m.from===me?"right":"left");
-    div.innerHTML=(m.deleted?`<i>This message was deleted</i>`:m.text)+
-    `<div class="small">${time} ${m.from===me?(m.seen?"<span class='pink'>✔✔</span>":"✔"):""}</div>`;
+    div.innerHTML=(m.deleted?`<i>This message was deleted</i>`:(m.replyTo?`<div class="small">Reply: ${m.replyTo}</div>`:"")+m.text)
+      + `<div class="small">${time} ${m.from===me?(m.seen?"<span class='pink'>✔✔</span>":"✔"):""}</div>`;
 
     if(m.from!==me && !m.seen) doc.ref.update({seen:true});
 
-    let timer,undoTimer;
+    // Message delete & undo
+    let pressTimer;
     div.addEventListener("mousedown",start);
     div.addEventListener("touchstart",start);
-    div.addEventListener("mouseup",stop);
-    div.addEventListener("touchend",stop);
+    div.addEventListener("mouseup",cancel);
+    div.addEventListener("mouseleave",cancel);
+    div.addEventListener("touchend",cancel);
 
     function start(){
-     timer=setTimeout(()=>{
-      if(!confirm("Delete this message?")) return;
-      const both=confirm("OK = Delete for BOTH\nCancel = Delete for ME");
-      div.classList.add("fade");
-      setTimeout(()=>{
-       if(both){
-        doc.ref.update({deleted:true});
-       }else{
-        doc.ref.update({
-         deletedFor:firebase.firestore.FieldValue.arrayUnion(me)
-        });
-       }
-      },300);
-     },600);
+      pressTimer=setTimeout(()=>{
+        const choice=prompt("Delete message?\n1 = Delete for ME\n2 = Delete for BOTH\nCancel = Nothing");
+        if(choice!=='1' && choice!=='2') return;
+        if(!confirm("Confirm delete?")) return;
+        div.classList.add("fade");
+        setTimeout(()=>{
+          if(choice==='2'){doc.ref.update({deleted:true});}
+          else{doc.ref.update({deletedFor:firebase.firestore.FieldValue.arrayUnion(me)});}
+        },300);
+      },600);
     }
-    function stop(){clearTimeout(timer);}
+    function cancel(){clearTimeout(pressTimer);}
+
+    // Swipe reply
+    div.addEventListener("dblclick",()=>{msg.value=`@Reply: ${m.text}`;msg.focus();});
 
     messages.appendChild(div);
    }
@@ -187,13 +177,11 @@ function loadChat(){
   const s=d.data();
   if(s?.online) headerStatus.innerText="online";
   else if(s?.lastSeen){
-   headerStatus.innerText="last seen "+
-   new Date(s.lastSeen).toLocaleTimeString([], {hour:'2-digit',minute:'2-digit'});
+   headerStatus.innerText="last seen "+new Date(s.lastSeen).toLocaleTimeString([], {hour:'2-digit',minute:'2-digit'});
   } else headerStatus.innerText="offline";
   typing.innerText=s?.typing?"typing...":"";
  });
 }
 </script>
-
 </body>
 </html>
